--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "eslint": "^5.7.0",
     "express": "^4.16.4",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "lodash": "^4.17.11"
   }
 }
