--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Irina Vls",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "eslint": "^5.7.0",
     "express": "^4.16.4",
     "express-graphql": "^0.6.12",
